# Traffic-enforce

./: .gitignore  README.md
frontend/: check-icons.js  package-lock.json  package.json
frontend/public/: testImage3.avif
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/analysis/: ImageCanvas.tsx  PipelineSidebar.tsx  StageOutputPanel.tsx
frontend/src/components/dashboard/: CapabilitiesGrid.tsx  StatsBar.tsx  UploadZone.tsx
frontend/src/components/layout/: PageShell.tsx  TopNav.tsx
frontend/src/components/report/: CompletionActions.tsx  DetectionSummary.tsx  EvidenceHeader.tsx  LicensePlateCard.tsx  SystemMetricsPanel.tsx  ViolationsPanel.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  ProgressBar.tsx
frontend/src/hooks/: usePipeline.ts
frontend/src/lib/: utils.ts
frontend/src/lib/api/: index.ts
frontend/src/store/: analysisStore.ts
frontend/src/types/: index.ts
models/DashCop/: .gitignore  README.md
models/DashCop/RideSafe/: README.md
models/DashCop/inference/: README.md  instance_funcs.py  pipeline.py
models/DashCop/inference/evaluation/: README.md  challan_rate_calc.py  clf_infer.py  clf_infer_multi.py  det_hnh_frame.py  hnh_eval.py  run_eval_pipeline.py  tr_eval.py
models/DashCop/inference/pipeline_comp/: clf_test.py  det_assoc.py  hnh.py  lp.py  lp_trocr.py  yolo_clf.py
models/DashCop/inference/tracker/: README.md  __init__.py  assoc_tracker_old.py  tracker.py
models/DashCop/inference/ultralytics/: __init__.py
models/DashCop/training/: README.md
models/DashCop/training/ANPR/: README.md  extract_lp_annots.py
models/DashCop/training/CA-SORT/: README.md  assoc_tracker.py  base_cfg.json  base_cfg.yaml  detection.py  node.py  offline_assoc_tracker_single_all.py  offline_tracker_solo_single_all.py  run.ipynb  tracker.py  tracker_dists.py
models/DashCop/training/HNH/: README.md  (+1 more)
models/clearview/: .gitignore  .pre-commit-config.yaml  CITATION.cff  clearview.bib  pyproject.toml  requirements.txt
models/clearview/.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
models/clearview/.github/workflows/: ci.yml
models/clearview/clearview/: __init__.py  api.py
models/clearview/clearview/data/: __init__.py  datasets.py  transforms.py
models/clearview/clearview/losses/: __init__.py  base.py  combined.py  edge.py  perceptual.py  pixel.py  structural.py
models/clearview/clearview/models/: __init__.py  attention_unet.py  base.py  blocks.py  resnet_unet.py  unet.py
models/clearview/clearview/scripts/: README.md  evaluate.py  inference.py  train.py
models/clearview/clearview/training/: __init__.py  callbacks.py  trainer.py
models/clearview/clearview/utils/: __init__.py  checkpoint.py  image.py  logger.py  metrics.py  visualization.py
models/clearview/tests/: README.md  __init__.py  conftest.py  test_checkpoint.py  test_data.py  test_edge.py  test_integration.py  test_losses.py  test_metrics.py  test_models.py  test_perceptual.py  test_resnet_unet.py  test_utils.py  test_visualization.py
models/licensePlateDetection/: run_tests.py
models/licensePlateDetection/fast_alpr/: alpr.py
models/licensePlateDetection/test/: test_alpr.py
models/vehicle_detection_count/: detect.py
(+57 files in other folders)
