[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clearview"
version = "0.1.0"
description = "Deep learning framework for single image deraining"
readme = ".github/README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
authors = [
    {name = "Saumya Saksena", email = "kumaar324@gmail.com"}
]
maintainers = [
    {name = "Saumya Saksena", email = "kumaar324@gmail.com"}
]
keywords = [
    "deep-learning",
    "computer-vision",
    "image-deraining",
    "rain-removal",
    "pytorch",
    "image-restoration"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "pytest>=7.3.0",
    "lark>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.1.0",
    "black>=23.3.0",
    "ruff>=0.0.270",
    "mypy>=1.3.0",
    "pre-commit>=3.3.0",
]

[project.urls]
Homepage = "https://github.com/dronefreak/clearview"
Repository = "https://github.com/dronefreak/clearview"
"Bug Tracker" = "https://github.com/dronefreak/clearview/issues"

[project.scripts]
clearview-train = "clearview.scripts.train:main"
clearview-evaluate = "clearview.scripts.evaluate:main"
clearview-inference = "clearview.scripts.inference:main"

[tool.setuptools]
packages = ["clearview"]

[tool.setuptools.package-data]
clearview = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--strict-markers -p no:launch_testing -p no:launch_ros"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py38"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "PIL.*",
    "cv2.*",
]
ignore_missing_imports = true
